[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "graph_agent"
version = "0.1.0"
description = "A short description of your package"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.9.7 || >3.9.7,<3.12"
streamlit = "1.36.0"
camel-ai = { extras = ["all"], version = "^0.1.5.7"}
torch = "2.1.0"

